css, javascript,html and all the front end design is done bhy Krish Patel

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,4 +1,6 @@
 /*=== MEDIA QUERY ===*/
+
+/*Author - Krish Patel  */
 @import url("https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900");
 body {
   line-height: 1.5;
