--- a/web/style/Styler.css
+++ b/web/style/Styler.css
@@ -4,7 +4,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/CascadeStyleSheet.css
 */
 /* 
     Created on : Apr 8, 2024, 11:20:29 p.m.
-    Author     : OWNER
+    Author     : Krish
 */
 
  body {
